# fastmcp-trello

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  glama.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml  release.yml
src/trello_mcp/: __main__.py  client.py  models.py  server.py
src/trello_mcp/tools/: attachments.py  boards.py  cards.py  labels.py  lists.py  search.py
tests/: conftest.py  test_client.py  test_integration.py  test_live.py  test_models.py
tests/test_tools/: test_attachments.py  test_boards.py  test_cards.py  test_labels.py  test_lists.py  test_search.py
