[project]
name = "trello-mcp"
version = "0.1.0"
description = "A Trello MCP server built with FastMCP"
readme = "README.md"
authors = [
    { name = "James Andrews", email = "james.andrews.dev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trello_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: tests that hit the real Trello API (skipped by default)",
]
addopts = "-m 'not live'"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
]
