[project]
name = "fastmcp-trello"
version = "0.1.1"
description = "A Trello MCP server built with FastMCP"
readme = "README.md"
authors = [
    { name = "James Andrews", email = "james.andrews.dev@gmail.com" }
]
license = "MIT"
requires-python = ">=3.12"
keywords = ["trello", "mcp", "model-context-protocol", "ai", "agents", "claude", "cursor", "copilot", "fastmcp", "automation", "project-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/Jimdrews/fastmcp-trello"
Repository = "https://github.com/Jimdrews/fastmcp-trello"
Issues = "https://github.com/Jimdrews/fastmcp-trello/issues"

[project.scripts]
fastmcp-trello = "trello_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trello_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: tests that hit the real Trello API (skipped by default)",
]
addopts = "-m 'not live'"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyrefly>=0.59.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.15.9",
]
